# arrowlib

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.en.md  README.md  arrowlib.code-workspace  arrowlib.tar.Z  main.cpp
.specstory/history/: 2025-07-11_03-15Z-modify-state-machine-diagram-error.md  2025-07-11_09-14Z-将图片转换为uml图.md  2025-07-14_00-29Z-实现c++14枚举名转换为字符串.md  2025-07-14_05-36Z-@enum-to-string-alt-h-@enum-to-string-h-@main-cpp-@test-enum-to-string-alt-h-@test-enum-to-string-h-根据这个代码规范修改.md  2025-07-14_08-09Z-implement-c++14-enum-to-string-conversion.md  2025-07-15_00-33Z-@implement-c++14-enum-to-string-conversion-@enum-to-string-auto-h-这段代码还有优化的空间吗.md  2025-07-15_02-17Z-understanding-xfs-metadata-corruption-errors.md  2025-07-15_06-27Z-@enum-to-string-auto-h-@enum-to-string-auto-h-bak-对比一下代码,从多个角度分析那个更加符合现代c++的风格。.md  2025-07-18_07-21Z-解读代码内容.md
Log/: LogDefine.h  Print.h  log_impl_log4cplus.h  log_impl_null.h  log_interface.h
Other/: LoadLib.h  StdAssist.h
Pattern/: Pattern.h
Pattern/Factory/: Create.h  Factory.h  Factory_complie.h
Pattern/Observer/: Subject.h
Pattern/Singleton/: Singleton.h  Singleton_Unmanager.h
Pattern/Task/: TaskOneThread.h
Task/: TaskOneThread.h
arrow/: arrow.h  define.h  log.h
arrow/log/: log.h  log_define.h  log_impl_log4cplus.h  log_impl_null.h  log_impl_std.h  log_interface.h  print.h  readme.md
arrow/other/: convert.h  delete_args.h  increment.h  load_lib.h  load_lib_test.h  obj_pool_simple.h  out_run_time.h  outruntime.h  set_tuple.h  static_cast.h  static_const.h  std_assist.h  type_count.h
arrow/pattern/: pattern.h
arrow/task/: lock_free_queue.h  lock_free_queue2.h  lock_free_queue_mpsc.h  lock_queue.h  simplg_lock_queue.h  tagged_point.h  task.h  task_one_thread.h  task_one_thread2.h  task_one_thread3.h  task_queue_t.h
arrow/typelist/: enum_to_str.h  enum_to_str_14.h  make_integer_sequence.h  static_array.h  static_map.h  static_string.h  static_string2.h  static_string3.h  static_string_old.h  type_name.h  type_name2.h  typelist.h  typelist_demo.h  typelist_fun.h  typelist_type.h
cmake/: linux_x64.cmake  mac.cmake
cmake-env/: aarch64-env.cmake  aarch64.cmake  add_resource.cmake  complie.cmake  get_target_complate.cmake  linux-x86_64-env.cmake  load_third_lib.cmake  mac-env.cmake  version.cmake  x64-env.cmake
cmake-env.2/: aarch64.cmake  add_resource.cmake  arm.cmake  cann504.cmake  cann601.cmake  complie.cmake  conan.check.cmake  huawei_secure.cmake  version.cmake  x64-env.cmake
cmake-env/aarch64/: aarch64-company.cmake
cmake-env/x64-env/: x64-com-dir.cmake  x64-home-dir.cmake
dev_pool/: CMakeLists.txt  main.cpp  small_obj_allocator.h  small_obj_base.h  test_chunk.h  test_fixed_allocator.h  test_small_obj.h
dev_pool/src/: chunk.h  (+3 more)
doc/: 任务.km
log/: log.h  log_impl_log4cplus.h  log_impl_null.h  log_interface.h
nlohmann/: json.hpp  json_arrow.hpp
other/: load_lib.h  std_assist.h
pattern/: pattern.h
task/: task_one_thread.h
test/test_enum2/: CMakeLists.txt  debug_pretty_function.cpp  enum_to_string.h  enum_to_string_alt.h  main.cpp  test_constexpr.cpp  test_enum_to_string.h  test_enum_to_string_alt.h
test_enum/: test_enum.h
testlib1/: CMakeLists.txt  testlib1.cpp  testlib1.log.ini  testlib1_main.cpp
testlib2/: CMakeLists.txt  testlib2.cpp
testmain/: CMakeLists.txt  main.cpp  test_enum_to_str.h  test_enum_to_str2.h  test_log_in_lib.h  test_static_map.h
typelist/: static_string.h  typelist_demo.h  typelist_fun.h  typelist_type.h
(+132 files in other folders)
